# to-do-list

./: Cargo.toml  License.md  ReadMe.md
migrations/2021-03-28-080145_create_tasks_table/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/model/: mod.rs  task.rs
src/ui/: app.glade  app.rs  main.rs  mod.rs  option_lens.rs  task_list.rs  task_view.rs  theme.rs
src/ui/form/: form_field.rs  mod.rs
src/ui/lens/: is_some.rs  mod.rs  option.rs
src/ui/widget/: form_field.rs  form_label.rs  form_text_box.rs  label.rs  mod.rs
src/view_model/: app.rs  mod.rs  task.rs  task_list.rs
